# extract-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/skills/adversarial-review/: SKILL.md
.claude/skills/pre-merge-gate/: SKILL.md
.claude/skills/safe-slice/: SKILL.md
.claude/skills/verify-and-sync/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml
api/: __init__.py  budget.py  content.py  errors.py  idempotency.py  main.py  models.py
docs/: CONTRIBUTING.md  STATUS.md
docs/adr/: 0001-dependency-versions.md  0002-structured-output-mode.md  0003-fixture-sourcing.md  0004-idempotency-store.md
docs/agentic/: GIT_WORKFLOW.md  QUESTION_PROTOCOL.md
docs/ops/: HUMAN_OPERATIONS.md
docs/plan/: PLAN.md
docs/testing/: MANUAL_VERIFICATION.md
fixtures/: README.md
fixtures/invoices/: invoice_0001.json  invoice_0002.json  invoice_0003.json  invoice_0004.json  invoice_0005.json  invoice_0006.json  invoice_0007.json  invoice_0008.json  invoice_0009.json  invoice_0010.json
harness/: __init__.py  normalize.py  run_accuracy.py  scoring.py
llm/: __init__.py  client.py  errors.py  pipeline.py  prompts.py  schema_utils.py
schemas/: __init__.py  _common.py  invoice_v1.py  iso4217.py  job_posting_v1.py  registry.py
scripts/: smoke.py  validate_fixtures.py
scripts/agent_hooks/: post_tool_failure.py  pre_tool_use.py  session_start.py  smoke_test.py
tasks/: BACKLOG.md
tests/: conftest.py  test_agent_hooks.py  test_anthropic_client.py  test_api.py  test_budget.py  test_content.py  test_errors.py  test_extract_endpoint.py  test_idempotency.py  test_import_boundary.py  test_iso4217.py  test_llm_client.py  test_normalize.py  test_openai_client.py  test_pipeline.py  test_prompts.py  test_provider_routing.py  test_registry.py  test_run_accuracy.py  test_schema_utils.py  test_schemas.py  test_scoring.py  test_smoke.py  test_stubs.py  test_validate_fixtures.py
