[project]
name = "extract-api"
version = "0.1.0"
description = "Strict-schema LLM extraction service with validation-retry and per-field accuracy across two providers."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Chris0Jeky" }]

# Versions verified live against PyPI on 2026-06-13 (see docs/adr/0001-dependency-versions.md).
dependencies = [
    "fastapi[standard]>=0.136,<0.139",
    "pydantic>=2.13,<3",
    "openai>=2.41,<3",
    # Floor is the verified 0.109.1 (ADR 0001): the T09 structured-output path needs the
    # Messages `output_config` parameter, which the 0.109.0 floor did not guarantee.
    "anthropic>=0.109.1,<0.112",
    "PyMuPDF==1.27.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov>=6,<8",
    "ruff==0.15.20",
    "mypy==2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "schemas", "llm", "harness"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["api", "schemas", "llm", "harness", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["api", "schemas", "llm", "harness"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["api", "schemas", "llm", "harness"]
# Provider SDKs are imported only in llm/client.py; if their stubs are incomplete,
# narrow with per-module overrides here rather than relaxing strict globally.

[[tool.mypy.overrides]]
# PyMuPDF (pymupdf) ships incomplete type info, so pymupdf.open reads as an untyped call
# under strict mode. Treat the package as untyped at its import boundary (api/content.py is
# the only importer) rather than relaxing strict for the whole codebase.
module = ["pymupdf", "pymupdf.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=api --cov=schemas --cov=llm --cov=harness --cov-report=term-missing --cov-fail-under=70"
# Coverage floor is a ratchet: it may rise, never fall (see docs/CONTRIBUTING.md).
